✨ Feature: Cache Buster System mit Dev Tools in Settings
- Cache-Buster Modul zum Erzwingen neuer Dateiversionen
- Toggle in Settings zum Ein-/Ausschalten
- Buttons für Cache leeren und Hard Reload
- Standardmäßig aktiviert

--- a/impressum.html
+++ b/impressum.html
@@ -164,6 +164,7 @@
     </nav>
 
     <!-- Scripts -->
+    <script src="js/core/cache-buster.js"></script>
     <script src="js/core/storage.js"></script>
     <script src="js/core/events.js"></script>
     <script src="js/core/theme.js"></script>
