--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
     </nav>
 
     <!-- Scripts -->
+    <script src="js/core/cache-buster.js"></script>
     <script src="world_capitals.js"></script>
     <script src="js/core/storage.js"></script>
     <script src="js/core/events.js"></script>
