🧹 Cleanup: Alte Dateien gelöscht, Config hinzugefügt, Version dynamisch
- entwickler.html, faq.html, script.js, wappen.html, coats_of_arms.js entfernt
- AppConfig Modul für zentrale Konfiguration
- Dynamische Versionsanzeige in Settings und Impressum
- Build-Datum hinzugefügt

--- a/help.html
+++ b/help.html
@@ -172,6 +172,7 @@
     </nav>
 
     <!-- Scripts -->
+    <script src="js/core/config.js"></script>
     <script src="js/core/cache-buster.js"></script>
     <script src="js/core/storage.js"></script>
     <script src="js/core/events.js"></script>
