--- a/impressum.html
+++ b/impressum.html
@@ -135,10 +135,10 @@
         <!-- Version -->
         <section class="text-center text-muted">
             <p>
-                <i class="fas fa-code-branch"></i> Version 2.0.0
+                <i class="fas fa-code-branch"></i> Version <span id="appVersion">2.0.0</span>
             </p>
             <p class="text-sm">
-                &copy; 2024 AUT Quiz
+                &copy; 2026 AUT Quiz
             </p>
         </section>
     </main>
@@ -164,6 +164,7 @@
     </nav>
 
     <!-- Scripts -->
+    <script src="js/core/config.js"></script>
     <script src="js/core/cache-buster.js"></script>
     <script src="js/core/storage.js"></script>
     <script src="js/core/events.js"></script>
