--- a/settings.html
+++ b/settings.html
@@ -154,7 +154,13 @@
                 <div class="setting-info">
                     <div class="setting-label">Version</div>
                 </div>
-                <span class="text-secondary">1.0.0</span>
+                <span class="text-secondary" id="appVersion">2.0.0</span>
+            </div>
+            <div class="setting-item">
+                <div class="setting-info">
+                    <div class="setting-label">Build</div>
+                </div>
+                <span class="text-secondary" id="buildDate">2026-01-08</span>
             </div>
             <div class="flex gap-2 mt-4">
                 <a href="help.html" class="btn btn-secondary btn-sm">
@@ -188,6 +194,7 @@
     </nav>
 
     <!-- Scripts -->
+    <script src="js/core/config.js"></script>
     <script src="js/core/cache-buster.js"></script>
     <script src="js/core/storage.js"></script>
     <script src="js/core/events.js"></script>
