♻️ Refactor: world_capitals.js in js/data verschoben, Pfade korrigiert

--- a/index.html
+++ b/index.html
@@ -185,7 +185,6 @@
     <!-- Scripts -->
     <script src="js/core/config.js"></script>
     <script src="js/core/cache-buster.js"></script>
-    <script src="world_capitals.js"></script>
     <script src="js/core/storage.js"></script>
     <script src="js/core/events.js"></script>
     <script src="js/core/theme.js"></script>
@@ -196,6 +195,7 @@
     <script src="js/games/QuizGame.js"></script>
     <script src="js/games/registry.js"></script>
     <script src="js/data/austria.js"></script>
+    <script src="js/data/worldCapitals.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
