📊 Feature: Umfassendes Statistik-System
- Neues Statistics-Modul für unabhängige Spiel-Counter
- Globale Stats: Gesamtspiele, Fragen, Korrekt/Falsch, Punkte, Spielzeit
- Pro-Spiel Stats: Gespielt, Streak, Beste/Schlechteste Runde, Zeit-Records
- Tägliche Stats mit Auto-Reset
- Session-Historie (letzte 100 Spiele)
- Achievement-System mit 18 freischaltbaren Achievements
- Antwort-Tracking für häufige Fehler
- Export/Import-Funktionalität
- Erweiterte Stats-Seite mit allen Metriken

--- a/help.html
+++ b/help.html
@@ -175,6 +175,7 @@
     <script src="js/core/config.js"></script>
     <script src="js/core/cache-buster.js"></script>
     <script src="js/core/storage.js"></script>
+    <script src="js/core/statistics.js"></script>
     <script src="js/core/events.js"></script>
     <script src="js/core/theme.js"></script>
     <script src="js/components/toast.js"></script>
