--- a/index.html
+++ b/index.html
@@ -86,6 +86,58 @@
             </div>
         </section>
 
+        <!-- Mode Selection Screen -->
+        <section id="modeScreen" class="game-screen">
+            <div class="page-header text-center">
+                <h1 class="page-title" id="modeTitle">Wähle einen Modus</h1>
+                <p class="page-subtitle" id="modeSubtitle">Wie schwer soll es sein?</p>
+            </div>
+
+            <div class="mode-selection">
+                <div id="modeGrid" class="mode-grid">
+                    <div class="mode-card" data-mode="amateur">
+                        <div class="mode-card-icon amateur">
+                            <i class="fas fa-graduation-cap"></i>
+                        </div>
+                        <div class="mode-card-content">
+                            <div class="mode-card-title">Amateur Quizzer</div>
+                            <div class="mode-card-desc">4 Antwortmöglichkeiten</div>
+                        </div>
+                        <div class="mode-card-badge easy">Leicht</div>
+                    </div>
+                    <div class="mode-card" data-mode="pro">
+                        <div class="mode-card-icon pro">
+                            <i class="fas fa-trophy"></i>
+                        </div>
+                        <div class="mode-card-content">
+                            <div class="mode-card-title">Pro Quizzer</div>
+                            <div class="mode-card-desc">Texteingabe ohne Hilfe</div>
+                        </div>
+                        <div class="mode-card-badge hard">Schwer</div>
+                    </div>
+                    <div class="mode-card" data-mode="rainbow">
+                        <div class="mode-card-icon rainbow">
+                            <i class="fas fa-rainbow"></i>
+                        </div>
+                        <div class="mode-card-content">
+                            <div class="mode-card-title">Regenbogen Quizzer</div>
+                            <div class="mode-card-desc">Texteingabe, Hinweise für 100P</div>
+                        </div>
+                        <div class="mode-card-badge special">Flexibel</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="mode-actions mt-6">
+                <button id="backToGames" class="btn btn-secondary">
+                    <i class="fas fa-arrow-left"></i> Zurück
+                </button>
+                <button id="startModeBtn" class="btn btn-primary btn-xl" disabled>
+                    <i class="fas fa-play"></i> Starten
+                </button>
+            </div>
+        </section>
+
         <!-- Game Screen -->
         <section id="gameScreen" class="game-screen">
             <!-- Progress -->
@@ -110,6 +162,12 @@
                     <div class="game-stat-label">Serie</div>
                 </div>
             </div>
+
+            <!-- Hint Button (Rainbow Mode) -->
+            <button id="hintButton" class="hint-button hidden" title="Hinweis kaufen">
+                <i class="fas fa-lightbulb"></i>
+                <span>Hinweis für <span id="hintCost">100</span>P</span>
+            </button>
 
             <!-- Question -->
             <div class="question-card">
@@ -187,11 +245,13 @@
     <script src="js/core/cache-buster.js"></script>
     <script src="js/core/storage.js"></script>
     <script src="js/core/statistics.js"></script>
+    <script src="js/core/points-history.js"></script>
     <script src="js/core/events.js"></script>
     <script src="js/core/theme.js"></script>
     <script src="js/components/toast.js"></script>
     <script src="js/components/navbar.js"></script>
     <script src="js/components/bottom-nav.js"></script>
+    <script src="js/games/GameModes.js"></script>
     <script src="js/games/GameEngine.js"></script>
     <script src="js/games/QuizGame.js"></script>
     <script src="js/games/registry.js"></script>
