feat: Extended Joker system with different jokers per mode
Amateur Mode Jokers:
- 50:50 (50 points) - Removes 2 wrong answers
- 1 Weg (25 points) - Removes 1 wrong answer
- Hinweis (30 points) - Random helpful hint

Pro Mode Jokers:
- Anfang (20 points) - Shows first letter
- Länge (15 points) - Shows word length
- 1 Buchst. (30 points) - Reveals 1 random letter
- 2 Buchst. (50 points) - Reveals 2 random letters
- Hinweis (40 points) - Helpful hint

Features:
- Price tags on each joker button
- Color-coded prices (green=cheap, yellow=medium, red=expensive)
- Jokers reset per question
- Hint display area for text hints

--- a/index.html
+++ b/index.html
@@ -120,19 +120,14 @@
                 </div>
             </div>
 
-            <!-- Game Actions Row (Hint + Joker) -->
-            <div class="game-actions-row">
-                <!-- Hint Button (Rainbow Mode) -->
-                <button id="hintButton" class="hint-button hidden" title="Hinweis kaufen">
-                    <i class="fas fa-lightbulb"></i>
-                    <span>Hinweis für <span id="hintCost">100</span>P</span>
-                </button>
+            <!-- Joker Bar -->
+            <div id="jokerBar" class="joker-bar hidden">
+                <!-- Joker werden dynamisch eingefügt -->
+            </div>
 
-                <!-- Joker Button (50:50) -->
-                <button id="jokerButton" class="joker-button hidden" title="50:50 Joker">
-                    <i class="fas fa-magic"></i>
-                    <span>50:50 (<span id="jokerCount">2</span>)</span>
-                </button>
+            <!-- Hint Display Area -->
+            <div id="hintDisplay" class="hint-display hidden">
+                <!-- Hinweise werden hier angezeigt -->
             </div>
 
             <!-- Question -->
@@ -220,6 +215,7 @@
     <script src="js/components/modal.js"></script>
     <script src="js/components/game-settings-dialog.js"></script>
     <script src="js/games/GameModes.js"></script>
+    <script src="js/games/JokerSystem.js"></script>
     <script src="js/games/GameEngine.js"></script>
     <script src="js/games/QuizGame.js"></script>
     <script src="js/games/registry.js"></script>
