--- a/points.html
+++ b/points.html
@@ -8,37 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="css/styles.css?v=2.1.4">
+    <link rel="stylesheet" href="css/styles.css?v=2.1.5">
 </head>
-<body data-page="points" class="has-bottom-nav">
-    <!-- Navbar -->
-    <nav class="navbar">
-        <a href="index.html" class="navbar-brand">
-            <i class="fas fa-flag"></i>
-            AUT Quiz
-        </a>
-        <div class="navbar-spacer"></div>
-        <div class="navbar-actions">
-            <button class="menu-toggle" id="menuToggle" aria-label="Menü" aria-expanded="false">
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="menu-dropdown" id="menuDropdown">
-                <a href="index.html" class="menu-item">
-                    <i class="fas fa-home"></i> Startseite
-                </a>
-                <a href="points.html" class="menu-item">
-                    <i class="fas fa-coins"></i> Punkte
-                </a>
-                <a href="stats.html" class="menu-item">
-                    <i class="fas fa-chart-bar"></i> Statistik
-                </a>
-                <div class="menu-divider"></div>
-                <a href="settings.html" class="menu-item">
-                    <i class="fas fa-cog"></i> Einstellungen
-                </a>
-            </div>
-        </div>
-    </nav>
+<body data-page="points" class="has-bottom-nav has-sidebar">
+    <!-- Sidebar will be injected by JS -->
 
     <!-- Main Content -->
     <main class="container page">
@@ -138,7 +111,7 @@
     <script src="js/core/theme.js"></script>
     <script src="js/components/toast.js"></script>
     <script src="js/components/modal.js"></script>
-    <script src="js/components/navbar.js"></script>
+    <script src="js/components/sidebar.js"></script>
     <script src="js/components/bottom-nav.js"></script>
     <script src="js/games/GameEngine.js"></script>
     <script src="js/games/QuizGame.js"></script>
